# Sword-jin_PWA-main

./: .gitignore  .gitleaks.toml  .gutconfig.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  export_presets.cfg  gdlintrc  generate_tileset.py  lighthouserc.json  project.godot  pyproject.toml  state.md
.github/: PULL_REQUEST_TEMPLATE.md
scenes/: assassin.tscn  bandit.tscn  berserker.tscn  chapter_manager.tscn  dialogue_manager.tscn  dummy.tscn  error_screen.tscn  ghost.tscn  ghost_runner.tscn  golem.tscn  iron_gate.tscn  main.tscn  main_with_driver.tscn  merchant_ally.tscn  mobile_controls.tscn  necromancer.tscn  player.tscn  potion_pickup.tscn  screen_fader.tscn  shaman.tscn  skeleton.tscn  skeleton_archer.tscn  skeleton_captain.tscn  title_screen.tscn  wraith.tscn
scripts/: achievement_screen.gd  achievement_toast.gd  arena_builder.gd  arrow.gd  assassin.gd  bandit.gd  berserker.gd  bestiary_screen.gd  chapter_manager.gd  ci.sh  daily_challenge_screen.gd  damage_number.gd  dialogue_manager.gd  dummy.gd  error_screen.gd  gen_bgm.py  generate_achievement_icons.py  generate_act_title_cards.py  generate_arrow_sfx.py  generate_bgm.py  generate_bgm_minimax.py  generate_boss_splash.py  generate_boss_splash_variants.py  generate_chapter_backgrounds.py  generate_class_icons.py  generate_concept_art.py  generate_currency_icons.py  generate_damage_type_icons.py  generate_effect_icons.py  generate_enemy_portraits.py  generate_enemy_sprites.py  generate_even_more_npcs.py  generate_expression_portraits.py  generate_extra_modifier_icons.py  (+120 more)
(+118 files in other folders)
